--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "connect-flash": "*",
+    "dotenv": "^8.2.0",
     "express": "^4.16.2",
     "express-handlebars": "*",
     "express-messages": "*",
     "express-session": "*",
     "express-validator": "*",
     "jsonwebtoken": "^8.1.1",
-    "mongodb": "*",
-    "mongoose": "*",
+    "mongodb": "^3.3.2",
+    "mongoose": "^5.7.1",
     "passport": "^0.4.0",
     "passport-google-oauth20": "^1.0.0"
   },
